--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     line-height: 18px;
     letter-spacing: 0.1em;
     color: #000000;
+    text-decoration: none;
 }
 .nav-menu-item{
     display: inline-block;
